objects/Survey_Thanks_Message__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>About__c</fullName>
        <label>About</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bottom_Center_Message__c</fullName>
        <label>Bottom Center Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bottom_Message_1__c</fullName>
        <label>Bottom Message 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Bottom_Message__c</fullName>
        <label>Bottom Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mail_Bottom_Header_1__c</fullName>
        <label>Mail Bottom Header 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mail_Bottom_Header__c</fullName>
        <label>Mail Bottom Header</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mail_Regards_Message__c</fullName>
        <label>Mail Regards Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mail_Reply_Text__c</fullName>
        <label>Mail Reply Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mail_Top_Header__c</fullName>
        <label>Mai Top Header</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Mail_appreciate_Text__c</fullName>
        <label>Mail appreciate Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other__c</fullName>
        <label>Other</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regards_Message__c</fullName>
        <label>Regards Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Satisfactory_Question_Text__c</fullName>
        <label>Satisfactory Question Text</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Terms_of_Use__c</fullName>
        <label>Terms of Use</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Thanks__c</fullName>
        <label>Thanks</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Top_Message__c</fullName>
        <label>Top Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>isCaseHeader__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isCaseHeader</label>
        <type>Checkbox</type>
    </fields>
    <label>Survey Thanks Message</label>
</CustomObject>